[build-system]
requires = ['flit_core >=3,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'pybudgetbook'
authors = [
    {name = 'Max Elfner', email = 'max_elfner@icloud.com'},
]

readme = 'README.md'
description= '''
Organize and sort your receipts locally,
use pandas power to analyze your spendings!
'''

classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License'
    ]

keywords = ['financial', 'anlysis', 'pandas', 'statistics']

requires-python = '>=3.8'
license = {file = 'LICENSE.txt'}

dynamic = ['version']

[project.urls]
Documentation = 'todo'
Source = 'todo'
Homepage = 'todo'

dependencies = [
    'numpy',
    'appdirs',
    'matplotlib > 3.7',
    'h5py > 3.0',
    ]

[project.optional-dependencies]
doc = ['Sphinx', 'Furo', 'MyST-parser']
