[build-system]
requires = ['flit_core >=3,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'pybudgetbook'
authors = [
    {name = 'Max Elfner', email = 'max_elfner@icloud.com'},
]

readme = 'README.md'
description= '''
Organize and sort your receipts locally,
use pandas power to analyze your spendings!
'''

classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License'
    ]

keywords = ['financial', 'anlysis', 'pandas', 'statistics']

requires-python = '>=3.8'
license = {file = 'LICENSE.txt'}

dynamic = ['version']

dependencies = [
    'PySide6',
    'numpy',
    'appdirs',
    'matplotlib > 3.7',
    'h5py > 3.0',
    'pandas > 1.5',
    'scikit-image',
    'Pillow',
    'pytesseract',
    'pypdfium2',
    'darkdetect',
    ]

[project.optional-dependencies]
doc = ['Sphinx', 'Furo', 'MyST-parser']

[project.scripts]
pybudgetbook = "pybudgetbook.ui.start_gui:start_main_ui"

[project.urls]
# Documentation = 'OnlyReadMe'
Source = 'https://github.com/max3-2/pybudgetbook'
Homepage = 'https://github.com/max3-2/pybudgetbook'
